--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,59 @@
 <html>
 <head>
   <title>Collection</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Collection</a>
+    </div>
+
+
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if true %>
+            <%= render :template => 'layouts/navbar/login' %>
+        <% else %>
+            <%= render :template => 'layouts/navbar/account' %>
+        <% end %>
+
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container" role="main">
+
+  <p id="msgid">toto</p>
+  <script type="application/javascript">
+      $(document).ready(function () {
+          $("#msgid").html("This is Hello World by JQuery");
+      });
+  </script>
+  <%= yield %>
+</div>
+
+<div id="footer" class="footer navbar-fixed-bottom">
+  <div class="container">
+    <p>Awesome site made by Stéphane Eicher, Gary Marigliano and Lucien Moor for HE-ARC</p>
+  </div>
+</div>
 
 </body>
 </html>
