--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,9 +2,12 @@
 Add custom CSS here
 */
 
-#footer
-{
+#footer {
     background-color: #595959;
     color: #ffffff;
     min-height: 50px;
+}
+
+#dd-menu-sort {
+    padding-right: 20px; !important;
 }
