--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Collection</a>
+      <%= link_to "Collection", "/", class: "navbar-brand" %>
     </div>
 
 
@@ -28,7 +28,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if true %>
+        <% if false %>
             <%= render :template => 'layouts/navbar/login' %>
         <% else %>
             <%= render :template => 'layouts/navbar/account' %>
@@ -40,17 +40,10 @@
 </nav>
 
 <div class="container" role="main">
-
-  <p id="msgid">toto</p>
-  <script type="application/javascript">
-      $(document).ready(function () {
-          $("#msgid").html("This is Hello World by JQuery");
-      });
-  </script>
   <%= yield %>
 </div>
 
-<div id="footer" class="footer navbar-fixed-bottom">
+<div id="footer" class="footer">
   <div class="container">
     <p>Awesome site made by Stéphane Eicher, Gary Marigliano and Lucien Moor for HE-ARC</p>
   </div>
