--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if false %>
+        <% if !user_signed_in? %>
             <%= render :template => 'layouts/navbar/login' %>
         <% else %>
             <%= render :template => 'layouts/navbar/account' %>
