--- a/app/views/layouts/navbar/account.html.erb
+++ b/app/views/layouts/navbar/account.html.erb
@@ -1,6 +1,9 @@
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Jean Paul
-    Dujardin<span class="caret"></span></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    <% if user_signed_in? %>
+    <%= current_user.pseudo %>
+  <%end %>
+  <span class="caret"></span></a>
   <ul class="dropdown-menu" role="menu">
     <li><a href="#">Mon compte</a></li>
     <li><a href="#">Se déconnecter</a></li>
