--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,10 +30,26 @@
             <h4 class="timeline-title">Mussum ipsum cacilds</h4>
 
             <p>
-              <small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small>
+              <small class="text-muted"><i class="glyphicon glyphicon-time"></i> Ajouté le dd.mm.yyyy</small>
             </p>
           </div>
           <div class="timeline-body">
+
+            <div class="row well well-sm">
+              <div class="album-metadata">
+                <img class="cover-image col-md-4" src="http://lorempixel.com/128/128/">
+                <ul class="album-details col-md-8">
+                  <li><span class="metadata-header">Album</span> Greatest Hits 2002 ésakfj sdkjkjsahd jkhakj hf</li>
+                  <li><span class="metadata-header">Artiste</span> A lot of people kjshdk ajhdkjah sd ksha dkahsdk
+                    jahsda
+                  </li>
+                  <li><span class="metadata-header">Année</span> 2002</li>
+                  <li><span class="metadata-header">Genre</span> Bullshit</li>
+                  <li><span class="metadata-header">Nombre de pistes</span> 6</li>
+                </ul>
+              </div>
+            </div>
+
             <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
               porris,
               paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis
@@ -41,6 +57,18 @@
               pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num
               significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num
               gostis.</p>
+            <hr>
+            <div class="row">
+              <div class="container col-sm-12">
+                <button type="button" class="btn btn-default">
+                  Voir en détails <i class="glyphicon glyphicon-triangle-right"></i>
+                </button>
+
+                <button type="button" class="btn btn-default">
+                  Supprimer <i class="glyphicon glyphicon-trash"></i>
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </li>
