--- a/app/views/layouts/navbar/login.html.erb
+++ b/app/views/layouts/navbar/login.html.erb
@@ -1,9 +1,11 @@
-<form class="navbar-form navbar-right">
+<%= form_for(:user, :url => session_path(:user), :html => {:class => 'navbar-form navbar-right'}) do |f| %>
   <div class="form-group">
-    <input type="text" placeholder="Email" class="form-control">
+    <%= f.email_field :email, autofocus: true ,:class=>'form-control',:placeholder => "Email"%>
   </div>
   <div class="form-group">
-    <input type="password" placeholder="Mot de passe" class="form-control">
+    <%= f.password_field :password, autocomplete: "off",:class=>'form-control',:placeholder => "mot de passe" %>
   </div>
-  <button type="submit" class="btn btn-success">Se connecter</button>
-</form>
+  <div class="actions form-group">
+    <%= f.submit "se connecter", :class=>'btn btn-success' %>
+  </div>
+<% end %>
