--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -267,8 +267,8 @@ th {
 
 @font-face {
     font-family: 'Glyphicons Halflings';
-    src: asset-url('fonts/glyphicons-halflings-regular.eot');
-    src: asset-url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), asset-url('fonts/glyphicons-halflings-regular.woff') format('woff'), asset-url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), asset-url('fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+    src: font-url('glyphicons-halflings-regular.eot');
+    src: font-url('glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), font-url('glyphicons-halflings-regular.woff') format('woff'), font-url('glyphicons-halflings-regular.ttf') format('truetype'), font-url('glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
