clean and merge cd and tracks

--- a/app/views/cds/show.html.erb
+++ b/app/views/cds/show.html.erb
@@ -40,5 +40,9 @@
   <%= @cd.item_collection %>
 </p>
 
+
+
 <%= link_to 'Edit', edit_cd_path(@cd) %> |
 <%= link_to 'Back', cds_path %>
+
+<%= render :template => 'tracks/index' %>
