--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,11 +1,10 @@
-<h1>Listing tracks</h1>
+<h1>Tracks</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
       <th>Tracknumber</th>
-      <th>Cd</th>
+      <th>Title</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,10 +12,8 @@
   <tbody>
     <% @tracks.each do |track| %>
       <tr>
-        <td><%= track.title %></td>
         <td><%= track.trackNumber %></td>
-        <td><%= track.cd %></td>
-        <td><%= link_to 'Show', track %></td>
+        <td><%= track.title %></td>
         <td><%= link_to 'Edit', edit_track_path(track) %></td>
         <td><%= link_to 'Destroy', track, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -26,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Track', new_track_path %>
+<%= link_to 'Add Track', new_track_path %>
