move timeline to a new template, add description field to CD

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,107 +1,3 @@
 <h1 class="text-center"> Ma collection de fou !</h1>
 
-
-
-<div class="row">
-  <div class="dropdown pull-right" id="dd-menu-sort">
-    <button class="btn btn-default dropdown-toggle" type="button" id="dd-menu-sort-btn" data-toggle="dropdown" aria-expanded="true">
-      Choisir un tri
-      <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu" role="menu" aria-labelledby="dd-menu-sort-btn">
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Trier par date d'ajout croissant</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Trier par date d'ajout décroissant</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Trier par titre croissant</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Trier par titre décroissant</a></li>
-    </ul>
-  </div>
-</div>
-
-
-<% @badgeColors = "warning,danger,success,default".split(",") %>
-
-<ul class="timeline">
-
-  <% (1..10).each do |i| %>
-      <li <%= raw 'class="timeline-inverted"' if i%2==0 %>>
-        <div class="timeline-badge <%= @badgeColors.sample %>"><i class="glyphicon glyphicon-cd"></i></div>
-        <div class="timeline-panel">
-          <div class="timeline-heading">
-            <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-
-            <p>
-              <small class="text-muted"><i class="glyphicon glyphicon-time"></i> Ajouté le dd.mm.yyyy</small>
-            </p>
-          </div>
-          <div class="timeline-body">
-
-            <div class="row well well-sm">
-              <div class="album-metadata">
-                <img class="cover-image col-md-4" src="http://lorempixel.com/128/128/">
-                <ul class="album-details col-md-8">
-                  <li><span class="metadata-header">Album</span> Greatest Hits 2002 ésakfj sdkjkjsahd jkhakj hf</li>
-                  <li><span class="metadata-header">Artiste</span> A lot of people kjshdk ajhdkjah sd ksha dkahsdk
-                    jahsda
-                  </li>
-                  <li><span class="metadata-header">Année</span> 2002</li>
-                  <li><span class="metadata-header">Genre</span> Bullshit</li>
-                  <li><span class="metadata-header">Nombre de pistes</span> 6</li>
-                </ul>
-              </div>
-            </div>
-
-            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
-              porris,
-              paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis
-              mé
-              pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num
-              significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num
-              gostis.</p>
-            <hr>
-            <div class="row">
-              <div class="container col-sm-12">
-                <button type="button" class="btn btn-default">
-                  Voir en détails <i class="glyphicon glyphicon-triangle-right"></i>
-                </button>
-
-                <button type="button" class="btn btn-default">
-                  Supprimer <i class="glyphicon glyphicon-trash"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-  <% end %>
-
-
-  <li>
-    <div class="timeline-badge info"><i class="glyphicon glyphicon-cd"></i></div>
-    <div class="timeline-panel">
-      <div class="timeline-heading">
-        <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-      </div>
-      <div class="timeline-body">
-        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris,
-          paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé
-          pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num
-          significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num
-          gostis.</p>
-        <hr>
-        <div class="btn-group">
-          <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-            <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </li>
-
-</ul>
+<%= render template: "layouts/timeline" %>
