add sort cd in timeline

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -38,5 +38,11 @@ body {
 }
 
 .metadata-header:after {
-    content: ":";
+    content: ": ";
+}
+
+h4 a:hover {
+    background-color: #ffffff;
+    color: #000000;
+    text-decoration: none;
 }
