--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,17 +5,17 @@
 
   <div class="field">
     <%= f.label :nom %><br />
-    <%= f.text_field :name, autofocus: true %>
+    <%= f.text_field :name, autofocus: true,:class=>'input form-control',:placeholder => "nom" %>
   </div>
 
   <div class="field">
     <%= f.label :prenom %><br />
-    <%= f.text_field :firstname, autofocus: true %>
+    <%= f.text_field :firstname, autofocus: true ,:class=>'input form-control',:placeholder => "prenom"%>
   </div>
 
   <div class="field">
     <%= f.label :pseudo %><br />
-    <%= f.text_field :pseudo, autofocus: true %>
+    <%= f.text_field :pseudo, autofocus: true ,:class=>'input form-control',:placeholder => "pseudo"%>
   </div>
 
   <div class="field">
@@ -32,7 +32,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true,:class=>'input form-control',:placeholder => "Email" %>
   </div>
 
   <div class="field">
@@ -40,12 +40,12 @@
     <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off" ,:class=>'input form-control',:placeholder => "mot de passe" %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off",:class=>'input form-control',:placeholder => "confirmation mot de passe" %>
   </div>
 
   <div class="actions">
