--- a/app/views/layouts/navbar/login.html.erb
+++ b/app/views/layouts/navbar/login.html.erb
@@ -9,3 +9,5 @@
     <%= f.submit "se connecter", :class=>'btn btn-success' %>
   </div>
 <% end %>
+
+<%= link_to('Login', new_user_session_path,:class=>"btn btn-success")  %>
