--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%= notice %></p>
 
+
+<%= link_to 'retour', users_path %> |
+<%= link_to "modifier", edit_user_registration_path %>
+
 <p>
   <strong>Name:</strong>
   <%= @user.name %>
@@ -29,11 +33,4 @@
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
-
-<p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<p>link to collection</p>
