--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -12,31 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :artist %><br>
+    <%= f.label :artist %>
     <%= f.text_field :artist %>
   </div>
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :editor %><br>
+    <%= f.label :editor %>
     <%= f.text_field :editor %>
   </div>
   <div class="field">
-    <%= f.label :cover %><br>
+    <%= f.label :cover %>
     <%= f.text_field :cover %>
   </div>
   <div class="field">
-    <%= f.label :year %><br>
+    <%= f.label :year %>
     <%= f.number_field :year %>
   </div>
   <div class="field">
-    <%= f.label :gender %><br>
+    <%= f.label :gender %>
     <%= f.text_field :gender %>
   </div>
   <div class="field">
-    <%= f.label :purchaseDate %><br>
+    <%= f.label :purchaseDate %>
     <%= f.date_select :purchaseDate %>
   </div>
   <div class="actions">
