--- a/app/views/tracks/editAll.html.erb
+++ b/app/views/tracks/editAll.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
+<!--   <div class="field">
     <%= f.label "N°" %>
     <%= f.number_field :track_number %>
   </div>
@@ -21,5 +21,30 @@
   </div>
   <div class="actions">
     <%= f.submit %>
+  </div> -->
+
+  <table>
+    <thead>
+      <tr>
+        <th>N°</th>
+        <th>Titre</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @tracks.each do |track| %>
+        <tr>
+          <td><%= f.number_field :track_number %></td>
+          <%= f.text_field :title %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <div class="actions">
+    <%= f.submit %>
   </div>
+
 <% end %>
+
