--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -1,9 +1,10 @@
+<!--tous ce qui est au dessus peut etre supprimer!!!!-->
 <h1>Tracks</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Tracknumber</th>
+      <th>N°</th>
       <th>Title</th>
       <th colspan="3"></th>
     </tr>
@@ -12,7 +13,7 @@
   <tbody>
     <% @tracks.each do |track| %>
       <tr>
-        <td><%= track.trackNumber %></td>
+        <td><%= track.track_number %></td>
         <td><%= track.title %></td>
         <td><%= link_to 'Edit', edit_track_path(track) %></td>
         <td><%= link_to 'Destroy', track, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -21,6 +22,7 @@
   </tbody>
 </table>
 
-<br>
+<%= link_to 'Modifier les pistes', cd_path(@cd) %> | 
+<%= link_to 'Ajouter une piste', new_track_path() %>
 
-<%= link_to 'Add Track', new_track_path %>
+
