replace fields in narbar by button login, create account

--- a/app/views/layouts/timeline.html.erb
+++ b/app/views/layouts/timeline.html.erb
@@ -6,7 +6,7 @@
     </button>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dd-menu-sort-btn">
       <li role="presentation">
-        <%= link_to 'Trier par date d\'ajout croissant', params.merge('sort' => 'date'), :role => 'menuitem' %>
+        <%= link_to 'Trier par date d\'ajout croissant', params.merge('sort' => 'nameDesc'), :role => 'menuitem' %>
       </li>
       <li role="presentation">
         <%= link_to 'Trier par date d\'ajout décroissant', params.merge('sort' => 'dateDesc'), :role => 'menuitem' %>
