--- a/app/views/layouts/navbar/login.html.erb
+++ b/app/views/layouts/navbar/login.html.erb
@@ -1,13 +1,9 @@
 <%= form_for(:user, :url => session_path(:user), :html => {:class => 'navbar-form navbar-right'}) do |f| %>
-  <div class="form-group">
-    <%= f.email_field :email, autofocus: true ,:class=>'form-control',:placeholder => "Email"%>
-  </div>
-  <div class="form-group">
-    <%= f.password_field :password, autocomplete: "off",:class=>'form-control',:placeholder => "mot de passe" %>
-  </div>
-  <div class="actions form-group">
-    <%= f.submit "se connecter", :class=>'btn btn-success' %>
-  </div>
+    <div class="form-group">
+      <%= link_to('Se connecter', new_user_session_path, :class => "btn btn-primary") %>
+    </div>
+    <div class="form-group">
+      <%= link_to('Créer un compte', new_user_registration_path, :class => "btn btn-default") %>
+    </div>
 <% end %>
-
 <%= link_to('Login', new_user_session_path,:class=>"btn btn-success")  %>
