--- a/app/views/layouts/timeline.html.erb
+++ b/app/views/layouts/timeline.html.erb
@@ -59,13 +59,12 @@
                   </div>
                 </div>
 
-                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
-                  porris,
-                  paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis
-                  mé
-                  pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num
-                  significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num
-                  gostis.</p>
+                <% unless cd.description.nil? || cd.description == '' %>
+                    <p class="description_header">Description</p>
+
+                    <p><%= cd.description %></p>
+                <% end %>
+
                 <hr>
                 <div class="row">
                   <div class="container col-sm-12">
