--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
-<h1 class="text-center"> Ma collection de fou !</h1>
+<h1 class="text-center"><%= @collection_name %></h1>
 
 <%= render template: "layouts/timeline" %>
