--- a/app/views/tracks/index_form.html.erb
+++ b/app/views/tracks/index_form.html.erb
@@ -1,3 +1,4 @@
+<!--tous ce qui est au dessus peut etre supprimer!!!!-->
 <h1>Tracks</h1>
 
 <table>
@@ -5,7 +6,6 @@
     <tr>
       <th>N°</th>
       <th>Title</th>
-      <th>Options</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,6 +21,7 @@
     <% end %>
   </tbody>
 </table>
+
 
 <%= link_to 'Ajouter une piste', new_track_path() %>
 
