--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -12,8 +12,8 @@
 
 <p>
   <strong>Cd:</strong>
-  <%= @track.cd %>
+  <%= @track.cd_id %>
 </p>
 
-<%= link_to 'Edit', edit_track_path(@track) %> |
+<%= link_to 'Edit', edit_track_path(@track) %>
 
