--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -11,39 +11,36 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :artist %>
-    <%= f.text_field :artist %>
-  </div>
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :editor %>
-    <%= f.text_field :editor %>
-  </div>
-  <div class="field">
-    <%= f.label :cover %>
-    <%= f.text_field :cover %>
-  </div>
-  <div class="field">
-    <%= f.label :year %>
-    <%= f.number_field :year %>
-  </div>
-  <div class="field">
-    <%= f.label :gender %>
-    <%= f.text_field :gender %>
-  </div>
-  <div class="field">
-    <%= f.label :purchaseDate %>
-    <%= f.date_select :purchaseDate %>
-  </div>
-
 <div class="field">
-  <%= f.file_field :image %>
+  <%= f.label "Nom de l'album: " %><br>
+  <%= f.text_field :name ,:class=>'input form-control'%>
 </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<div class="field">
+  <%= f.label "Artiste: " %><br>
+  <%= f.text_field :artist ,:class=>'input form-control'%>
+</div>
+<div class="field">
+  <%= f.label "Editeur: " %><br>
+  <%= f.text_field :editor ,:class=>'input form-control'%>
+</div>
+<div class="field">
+  <%= f.label "Année: " %><br>
+  <%= f.number_field :year ,:class=>'input form-control' %>
+</div>
+<div class="field">
+  <%= f.label "Style: " %><br>
+  <%= f.text_field :gender ,:class=>'input form-control'%>
+</div>
+<div class="field">
+  <%= f.label :purchaseDate %><br>
+  <%= f.date_select :purchaseDate ,:class=>'input form-control'%>
+</div>
+<div class="field">
+  <%= f.file_field :image%>
+</div><br>
+
+<div class="actions">
+  <%= f.submit "Enregistrer" %>
+</div>
+
 <% end %>
