--- a/app/views/cds/edit.html.erb
+++ b/app/views/cds/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing cd</h1>
+<p id="notice"><%= notice %></p>
 
-<%= render 'form' %>
+<h1>Modifications de l'album</h1>
 
-<%= link_to 'Show', @cd %> |
-<%= link_to 'Back', cds_path %>
+<div class="contains">
+  <div class="col-md-4 cover-image">
+    <%= link_to image_tag(@cd.image.url(:large)), @cd.image.url, :class => 'cover-image' %>
+  </div>
+
+  <div class="col-md-8">
+    <%= render 'form' %>
+  </div>
+</div>
