design login form, link to forgot password and removed anonym from register form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>my Sign up</h2>
+<h2>Nouveau compte</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -19,13 +19,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :anonym %><br>
-    <%= f.check_box :anonym %>
-  </div>
-
-  <div class="field">
-    <%= f.label :birthdate %><br>
-    <%= f.date_select :birthdate %>
+    <%= f.label "Date de naissance" %><br>
+    <%= f.date_select :birthdate,default: -20.years.from_now, :start_year=>Date.today.year - 100, :end_year => Time.now.year%>
   </div>
 
 
@@ -49,6 +44,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", :class=>"btn btn-default" %>
+    <%= f.submit "s'enregistrer", :class=>"btn btn-success" %>
   </div>
 <% end %>
