--- a/app/assets/stylesheets/lucien.css
+++ b/app/assets/stylesheets/lucien.css
@@ -30,7 +30,7 @@
     text-align: left;
  }
 
-.alert-notice {
+.alert-notice, #flash_notice {
     background-color: #dff0d8;
     border-color: #d6e9c6;
     color: #468847;
