--- a/app/views/item_collections/_form.html.erb
+++ b/app/views/item_collections/_form.html.erb
@@ -19,9 +19,10 @@
     <%= f.label :beginDate %><br>
     <%= f.date_select :beginDate ,:start_year=>Date.today.year - 100, :end_year => Time.now.year%>
   </div>
+
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+    <%= f.label "Collection privé" %>
+    <%= f.check_box :isPrivate%>
   </div>
   <div class="actions">
     <%= f.submit %>
