--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,9 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+<% flash.each do |name, msg| %>
+<%= content_tag :div, msg, :id => "flash_alert" if msg.is_a?(String) %>
+<% end %>
 
   <div class="field">
     <%= f.label :nom %><br />
@@ -35,12 +38,12 @@
     <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" ,:class=>'input form-control',:placeholder => "mot de passe" %>
+    <%= f.password_field :password, autocomplete: "off" ,:class=>'input form-control',:placeholder => "mot de passe",:validate => true %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off",:class=>'input form-control',:placeholder => "confirmation mot de passe" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off",:class=>'input form-control',:placeholder => "confirmation mot de passe"%>
   </div>
 
   <div class="actions">
