--- a/app/views/layouts/timeline.html.erb
+++ b/app/views/layouts/timeline.html.erb
@@ -69,7 +69,8 @@
                       <li><span class="metadata-header">Artiste</span><%= cd.artist %></li>
                       <li><span class="metadata-header">Année</span><%= cd.year %></li>
                       <li><span class="metadata-header">Genre</span><%= cd.gender %></li>
-                      <li><span class="metadata-header">Nombre de pistes</span><%= cd.tracks.size %></li>
+
+                      <li><span class="metadata-header">Nombre de pistes</span><%= cd.tracks.size unless cd.tracks.nil?%></li>
                     </ul>
                   </div>
                 </div>
