--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@track) do |f| %>
+<%= form_for([@track.cd, @track]) do |f| %>
   <% if @track.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@track.errors.count, "error") %> prohibited this track from being saved:</h2>
@@ -14,7 +14,7 @@
   <div class="field">
     <%= f.label "N°" %>
     <% if :track_number? %>
-      <%= f.number_field :track_number, :value => (Track.where(cd_id: @track.cd_id).size) %>
+      <%= f.number_field :track_number, :value => (Track.where(cd_id: @track.cd_id).size + 1) %>
     <% else %>
       <%= f.number_field :track_number%>
     <% end %>
