--- a/app/views/tracks/edit.html.erb
+++ b/app/views/tracks/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @track %> |
-<%= link_to 'Back', tracks_path %>
+<%= link_to 'Show', [@track.cd, @track] %> |
+<%= link_to 'Back', @track.cd %>
