--- a/app/views/item_collections/_form.html.erb
+++ b/app/views/item_collections/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div class="field">
     <%= f.label "Collection privé" %>
-    <%= f.check_box :isPrivate%>
+    <%= f.check_box :is_private%>
   </div>
   <div class="actions">
     <%= f.submit %>
