--- a/app/views/item_collections/index.html.erb
+++ b/app/views/item_collections/index.html.erb
@@ -1,12 +1,21 @@
-<h1>Listing item_collections</h1>
-
-<table>
+<h1>Liste des collections</h1>
+<div class="pull-right input-group add-on">
+  <%= form_tag item_collections_path, :method => 'get',:class=>"form-inline" do %>
+  <div class="form-group input-group add-on">
+    <%= text_field_tag :search, params[:search],:class=>"form-control",:placeholder=>"pseudo de l'utilisateur" %>
+    <div class="input-group-btn">
+    <button class="btn btn-default bg-blue" type="submit"><i class="glyphicon glyphicon-search white"></i>      </button>
+    </div>
+  </div>
+  <%end%>
+</div>
+<table class="table table-condensed">
   <thead>
     <tr>
       <th>Name</th>
       <th>Begindate</th>
       <th>User</th>
-      <th colspan="3"></th>
+      <th colspan="3">Action</th>
     </tr>
   </thead>
 
@@ -15,15 +24,15 @@
       <tr>
         <td><%= item_collection.name %></td>
         <td><%= item_collection.beginDate %></td>
-        <td><%= item_collection.user %></td>
-        <td><%= link_to 'Show', item_collection %></td>
-        <td><%= link_to 'Edit', edit_item_collection_path(item_collection) %></td>
-        <td><%= link_to 'Destroy', item_collection, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= item_collection.user.pseudo %></td>
+        <td>
+          <%= link_to item_collection do %>
+          <i class="glyphicon glyphicon-eye-open blue"></i>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Item collection', new_item_collection_path %>
