--- a/app/views/layouts/timeline.html.erb
+++ b/app/views/layouts/timeline.html.erb
@@ -5,7 +5,7 @@
     <%= link_to 'Ajouter un CD', new_cd_path, :class => 'btn btn-success' %>
 <% else %>
     <div class="row">
-      <div class="dropdown pull-right" id="dd-menu-sort">
+      <div class="dropdown" id="dd-menu-sort">
         <button class="btn btn-default dropdown-toggle" type="button" id="dd-menu-sort-btn" data-toggle="dropdown" aria-expanded="true">
           Choisir un tri
           <span class="caret"></span>
@@ -25,6 +25,16 @@
             <%= link_to 'Trier par nom décroissant', params.merge('sort' => 'nameDesc'), :role => 'menuitem' %>
           </li>
         </ul>
+              <div class="pull-right input-group add-on">
+          <%= form_tag item_collections_path, :method => 'get',:class=>"form-inline" do %>
+          <div class="form-group input-group add-on">
+            <%= text_field_tag :search, params[:search],:class=>"form-control",:placeholder=>"Nom de la collection" %>
+            <div class="input-group-btn">
+            <button class="btn btn-default bg-blue" type="submit"><i class="glyphicon glyphicon-search white"></i>        </button>
+            </div>
+          </div>
+          <%end%>
+          </div>
       </div>
     </div>
 
