--- a/app/views/layouts/navbar/account.html.erb
+++ b/app/views/layouts/navbar/account.html.erb
@@ -5,7 +5,8 @@
   <%end %>
   <span class="caret"></span></a>
   <ul class="dropdown-menu" role="menu">
-    <li><%=link_to "mon compte", user_path(current_user)%></li>
-    <li><%= link_to('se déconnecter', destroy_user_session_path, :method => :delete) %></li>
+    <li><%=link_to "Mon compte", user_path(current_user)%></li>
+    <li><%=link_to "Ma collection", item_collection_path(userCollection(current_user.id))%></li>
+    <li><%= link_to('Se déconnecter', destroy_user_session_path, :method => :delete) %></li>
   </ul>
 </li>
