--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Collection", "/", class: "navbar-brand" %>
+      <%= link_to "Home", "/", class: "navbar-brand" %>
+      
     </div>
 
 
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li><%= link_to "Utilisateurs", users_path, class: "navbar-brand" %></li>
+        <li><%= link_to "Collections", item_collections_path, class: "navbar-brand" %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if !user_signed_in? %>
