--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -1,46 +1,48 @@
-<%= form_for(@cd, html:{multipart: true}) do |f| %>
-  <% if @cd.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@cd.errors.count, "error") %> prohibited this cd from being saved:</h2>
+<%= form_for(@cd, html: {multipart: true}) do |f| %>
+    <% if @cd.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@cd.errors.count, "error") %> prohibited this cd from being saved:</h2>
 
-      <ul>
-      <% @cd.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% @cd.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label "Nom de l'album: " %><br>
+      <%= f.text_field :name, :class => 'input form-control' %>
     </div>
-  <% end %>
+    <div class="field">
+      <%= f.label "Artiste: " %><br>
+      <%= f.text_field :artist, :class => 'input form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label "Editeur: " %><br>
+      <%= f.text_field :editor, :class => 'input form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label "Année: " %><br>
+      <%= f.number_field :year, :class => 'input form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label "Style: " %><br>
+      <%= f.text_field :gender, :class => 'input form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :purchaseDate %><br>
+      <%= f.date_select :purchaseDate, :start_year => Date.today.year - 100, :end_year => Time.now.year, :class => 'input form-control' %>
+    </div>
+    <div class="field">
+      <%= f.file_field :image %>
+    </div><br>
 
-<div class="field">
-  <%= f.label "Nom de l'album: " %><br>
-  <%= f.text_field :name ,:class=>'input form-control'%>
-</div>
-<div class="field">
-  <%= f.label "Artiste: " %><br>
-  <%= f.text_field :artist ,:class=>'input form-control'%>
-</div>
-<div class="field">
-  <%= f.label "Editeur: " %><br>
-  <%= f.text_field :editor ,:class=>'input form-control'%>
-</div>
-<div class="field">
-  <%= f.label "Année: " %><br>
-  <%= f.number_field :year ,:class=>'input form-control' %>
-</div>
-<div class="field">
-  <%= f.label "Style: " %><br>
-  <%= f.text_field :gender ,:class=>'input form-control'%>
-</div>
-<div class="field">
-  <%= f.label :purchaseDate %><br>
-  <%= f.date_select :purchaseDate , :start_year=>Date.today.year - 100, :end_year => Time.now.year,:class=>'input form-control'%>
-</div>
-<div class="field">
-  <%= f.file_field :image%>
-</div><br>
+    <%= f.hidden_field :item_collection_id, :value => @item_collection_id %>
 
-<div class="actions">
-  <%= f.submit "Enregistrer" %>
-</div>
+    <div class="actions">
+      <%= f.submit "Enregistrer" %>
+    </div>
 
 <% end %>
